# sdl-tutorial

./: CMakeLists.txt  README.md  main.cpp
cmake_utils/: CMakeLists.txt
resource/musics/: s16le_44100.pcm
resource/videos/: image-yuv420p-640x426.yuv
src/: CMakelists.txt
src/create_and_show_window/: CMakelists.txt  create_and_show_window.cpp
src/load_image_with_display/: CMakelists.txt  load_image_with_display.cpp
src/load_yuv_with_display/: CMakelists.txt  load_yuv_with_display.cpp
src/load_yuv_with_play/: CMakelists.txt  load_yuv_with_play.cpp
src/pull_pcm_with_play/: CMakelists.txt  pull_pcm_with_play.cpp
src/push_pcm_with_play/: CMakelists.txt  push_pcm_with_play.cpp
